# limesoda

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  _sidebar.md  index.html  pyproject.toml
.github/workflows/: ci.yml
UX_prototype/: credentials.html  genesis.html  index.html  onboarding.html  organization.html  package-lock.json  package.json  project_settings.html  projects.html  style.css  vite.config.js
UX_prototype/src/: App.jsx  index.css  main.jsx
app/: __init__.py  main.py
app/webhooks/: router.py  temporal.py
doc/: Open_Source_Strategy.md  PRD.md  Quality_Metrics.md  vision.md
doc/00_market_research/: Limesoda_Market_Feasibility_Report.md
doc/01_prd/: Limesoda_PRD.md
doc/02_dx_user_guide/: DX_User_Guide.md
doc/02_user_guide/: 00_Index.md  01_Onboarding.md  02_Genesis.md  03_Pipeline.md  04_Monitoring.md  05_Production.md
doc/02_ux_user_guide/: 00_Index.md  01_Onboarding.md  02_New_Feature.md  03_Pipeline.md  03_Task_Management.md  04_Human_Accountability.md  04_Monitoring.md  05_Infrastructure_Secrets.md  05_Production.md  06_Agent_Management.md  06_GitHub_Workflow.md  07_ClusterHealth.md  07_Troubleshooting.md  08_Security_Privacy.md
engine/: e2b.Dockerfile  p1_market_research.py  requirements.txt  sandbox_demo.py
get-started/: new-machine-setup.sh  new-pve-machine-setup.sh  setup-python-env.sh  setup.py
limesoda-doc/: Core_Ontology.md  Repository_Governance.md  SOP_and_Checkpoints.md  vision.md
prototype/: index.html
tests/: test_compiler.py  test_core.py  test_webhooks_functional.py  test_webhooks_unit.py
(+125 files in other folders)
