[project]
name = "limesoda"
version = "0.1.0"
description = "AI Agentic Coding Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.1.3",
    "langchain-anthropic>=1.4.0",
    "langchain-community>=0.4.1",
    "tavily-python>=0.7.23",
    "grandalf>=0.8",
    "protobuf>=5.29.3",
    "grpcio-tools>=1.70.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "prisma>=0.15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "flake8>=7.0.0",
    "black>=24.0.0",
]

[tool.uv]
managed = true
package = false
